fixed aboutText overflow

--- a/src/components/About/index.css
+++ b/src/components/About/index.css
@@ -37,15 +37,15 @@ section {
 
 @media only screen and (max-width: 600px) {
   #aboutImage {
-    height: 18rem;
-    width: 20rem;
-    border-radius: 50%;
+    height: 16rem;
+    width: 18rem;
+    border-radius: 2%;
     /* border: solid black; */
     box-shadow: 5px 5px lightblue;
   }
 
   .aboutTxt {
-    font-size: 1.6rem;
+    font-size: 1.3rem;
     margin-top: 3%;
   }
 
